# pyspringcrypt

./: .editorconfig  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
src/: pyspringcrypt.py
tests/: test_AESEncryptor.py  test_commandline.py
